# ads-and

./: .gitattributes  .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  Infer_Integration_MWE.ipynb  Infer_MWE.ipynb  LICENSE  README.md  Test.ipynb  ToDo.md  pyproject.toml  queried_publications_lang_translated_openai_tokenized_specter2_100.jsonl  requirements-gpu-cu126.txt  requirements-research.txt
.github/workflows/: nightly-train-infer-smoke.yml  release.yml
artifacts/metrics/full_20260218T111506Z_cli02681429/: 00_context.json  01_subset_summary.json  02_pairs_qc.json  02_split_balance.json  03_train_manifest.json  04_clustering_config_used.json  05_go_no_go_full.json  05_stage_metrics_full.json  06_clustering_test_per_seed__chars_cpu_20260407_v1.csv  06_clustering_test_per_seed__release_0_1_3_py312_torch260_transformers4562.csv  06_clustering_test_report__chars_cpu_20260407_v1.json  06_clustering_test_report__chars_cpu_20260407_v1.md  06_clustering_test_report__release_0_1_3_py312_torch260_transformers4562.json  06_clustering_test_report__release_0_1_3_py312_torch260_transformers4562.md  06_clustering_test_summary__chars_cpu_20260407_v1.csv  06_clustering_test_summary__release_0_1_3_py312_torch260_transformers4562.csv  99_compare_cluster_report_to_baseline__chars_cpu_20260407_v1.json  99_compare_cluster_report_to_baseline__release_0_1_3_py312_torch260_transformers4562.json
author_name_disambiguation_research/: __init__.py  __main__.py  api.py  cli.py
configs/: gates.yaml  paths.colab.yaml  paths.local.yaml
configs/clustering/: dbscan_paper.yaml  dbscan_paper_eps_buckets_v1.yaml  dbscan_paper_eps_buckets_v2.yaml  dbscan_paper_eps_buckets_v3.yaml  dbscan_wave_b_v1.yaml
configs/infer_runs/: full.yaml  mid.yaml  mini.yaml  smoke.yaml
configs/model/: nand_best.yaml  nand_specter2_adapter.yaml  nand_specter2_base.yaml
configs/runs/: full.yaml  mid.yaml  mini.yaml  smoke.yaml
docs/: clean_prod_setup.md  data_contracts.md  inference_workflow.md  lineage_and_modifications.md  provenance.md  runbook_nand_best.md  training_workflow.md
docs/baselines/: infer_ads_active.json  infer_ads_full_run_20260305_v21_fix4.json  infer_ads_full_run_20260305_v22_fix2.json  infer_ads_full_run_20260305_v22_fix2_transition.md  lspo_quality_operational.json  workspace_cleanup_keep_set_20260409.json
docs/developer-notes/: release.md
docs/experiments/: 2026-02-27_blocking_rescue_lspo_rollback.md  hf_endpoint_t4_decision_20260401.md  infer_cold_path_wave_20260408.md  perf_pkg2_chars_v1.md
neural_name_dismabiguator-main/: AND_dataset_builder.py  AND_nn_exp.py  AND_readdata_exp.py  README.md  croissant.json  environment.yml  experiment.py  results.py
notebooks/exploration/: legacy_test_specter_embeddings.ipynb
notebooks/interface/: 00_setup_and_config.ipynb  01_data_and_subsets.ipynb  02_embeddings_and_pairs.ipynb  03_train_nand_best.ipynb  04_infer_cluster_ads.ipynb  05_run_report_and_go_no_go.ipynb
notebooks/reports/: ads_cluster_report_template.ipynb
scripts/benchmarks/: bench_chars2vec_modes.py  bench_infer_cpu_stages.py  cuml_e2e_smoke.py
scripts/modal_mwe/: README.md  build_testset.py  client_mwe.py  modal_app.py  smoke_test.ps1
scripts/ops/: check_baseline_integrity.py  check_release_version.py  compare_cluster_test_reports.py  freeze_eps_experiments.py  freeze_infer_baseline.py  gpu_env_doctor.py  prune_infer_run.py  write_infer_baseline_manifest.py
src/: cli.py  infer_ads_api.py
src/approaches/nand/: __init__.py  build_pairs.py  cluster.py  export.py  infer_pairs.py  train.py
src/author_name_disambiguation/: __init__.py  __main__.py  _modal_app.py  _modal_backend.py  api.py  cli.py  defaults.py  embedding_contract.py  hf_compatibility_report.py  hf_transport.py  infer_sources.py  precompute_source_embeddings.py  progress.py  public_api.py  public_cli.py  source_inference.py  source_subset.py  specter_benchmark.py  specter_hf_lab_benchmark.py  workflow_helpers.py
src/author_name_disambiguation/common/: cache_ops.py  cli_ui.py  config.py  io_schema.py  npy_cache.py  numeric_safety.py  package_resources.py  pipeline_reports.py  run_report.py  runtime_policy.py  (+5 more)
src/common/: cache_ops.py  cli_ui.py  config.py  cpu_runtime.py  io_schema.py  pipeline_reports.py  run_report.py  subset_artifacts.py  subset_builder.py  uid_registry.py
src/data/: __init__.py  build_blocks.py  build_mentions.py  prepare_ads.py  prepare_lspo.py
src/features/: __init__.py  embed_chars2vec.py  embed_specter.py
tests/e2e/: test_cluster_export.py  test_run_context_flow.py  test_train_bundle_infer_smoke.py
tests/integration/: test_cli_cache_commands.py  test_cli_cluster_test_report.py  test_cli_precompute_source_embeddings.py  test_cli_run_infer_ads.py  test_cli_run_infer_sources.py  test_cli_run_stage.py  test_cli_run_train_stage.py  test_hf_compatibility_report.py  test_pair_building.py  test_runtime_modes.py  test_specter_benchmark.py  test_specter_hf_lab_benchmark.py  test_split_balancing.py  test_train_manifest_fields.py
tests/unit/: test_bench_chars2vec_modes.py  test_blocking.py  test_cache_ops.py  test_check_baseline_integrity.py  test_cli_infer_ads.py  test_cli_model_bundle.py  test_cli_parser.py  test_cli_ui.py  test_cli_user_experience.py  test_cluster_constraints.py  test_cluster_test_report.py  test_compare_cluster_test_reports.py  test_config_run_id.py  test_cpu_runtime.py  test_cuml_e2e_smoke.py  test_device_policy.py  test_embed_specter_backend.py  test_embedding_caches.py  test_export_source_mirrored.py  test_freeze_infer_baseline.py  test_gpu_env_doctor.py  test_hf_transport.py  test_infer_ads_api.py  test_infer_pairs_device.py  test_infer_sources_api.py  test_io_schema_pair_scores.py  test_modal_cost_reconciliation.py  test_modal_mwe_costs.py  test_numeric_safety.py  test_pipeline_reports.py  test_precompute_source_embeddings.py  test_prepare_ads.py  test_prune_infer_run.py  test_public_cli.py  test_release_artifacts.py  test_research_workspace.py  test_run_report_gates.py  test_runtime_policy.py  test_source_inference_specter_fanout.py  test_source_subset.py  (+8 more)
(+27 files in other folders)
