[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ads-and"
version = "0.2.0"
description = "ADS author name disambiguation with a bundled NAND-based baseline model and automatic local CPU/GPU inference."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Raphael Schlattmann", email = "raphael.schlattmann@tu-berlin.de" },
]
maintainers = [
  { name = "Raphael Schlattmann", email = "raphael.schlattmann@tu-berlin.de" },
]
keywords = [
  "ads",
  "astronomy",
  "author-name-disambiguation",
  "entity-resolution",
  "bibliometrics",
  "scholarly-metadata",
  "digital-humanities",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.3",
  "tqdm>=4.66",
  "duckdb>=1.1",
  "chars2vec==0.1.7",
  "keras==3.13.2",
  "tensorflow==2.20.0",
  "torch>=2.10,<2.11",
  "huggingface_hub>=0.23",
  "transformers>=4.38",
  "adapters>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
perf = [
  "numba>=0.60",
]
cpu_onnx = [
  "onnx>=1.16",
  "onnxruntime>=1.18",
]
research = [
  "jupyter>=1.0",
  "notebook>=7.0",
]

[project.urls]
Homepage = "https://github.com/raphschlatt/Author_Name_Disambiguation"
Repository = "https://github.com/raphschlatt/Author_Name_Disambiguation"
Issues = "https://github.com/raphschlatt/Author_Name_Disambiguation/issues"
Paper = "https://doi.org/10.1088/1538-3873/ae1e2d"
"Original NAND Repository" = "https://github.com/deepthought-initiative/neural_name_dismabiguator"

[project.scripts]
ads-and = "author_name_disambiguation.public_cli:main"
author-name-disambiguation = "author_name_disambiguation.public_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/author_name_disambiguation"]
exclude = [
  "/src/author_name_disambiguation/api.py",
  "/src/author_name_disambiguation/cli.py",
  "/src/author_name_disambiguation/workflow_helpers.py",
  "/src/author_name_disambiguation/data/prepare_lspo.py",
  "/src/author_name_disambiguation/common/subset_artifacts.py",
  "/src/author_name_disambiguation/approaches/nand/train.py",
  "/src/author_name_disambiguation/resources/train_runs/**",
  "/src/author_name_disambiguation/resources/models/nand_best.yaml",
]

[tool.hatch.build.targets.sdist]
include = [
  "/src/author_name_disambiguation",
  "/README.md",
  "/LICENSE",
  "/CITATION.cff",
]
exclude = [
  "/src/author_name_disambiguation/api.py",
  "/src/author_name_disambiguation/cli.py",
  "/src/author_name_disambiguation/workflow_helpers.py",
  "/src/author_name_disambiguation/data/prepare_lspo.py",
  "/src/author_name_disambiguation/common/subset_artifacts.py",
  "/src/author_name_disambiguation/approaches/nand/train.py",
  "/src/author_name_disambiguation/resources/train_runs/**",
  "/src/author_name_disambiguation/resources/models/nand_best.yaml",
  "/docs/**",
  "/tests/**",
  "/scripts/**",
  "/artifacts/**",
  "/data/**",
  "/configs/**",
]
